--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             }
         }
     </style>
+
 </head>
 
 <body>
-
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
         <div class="container">
@@ -34,6 +35,7 @@
                 <h2>School Attendance</h2>
             </a>
 
+            <!-- This button with show up when the screen size is small -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -42,40 +44,6 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <!-- <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Login
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Teacher</a></li>
-
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-
-                            <li><a class="dropdown-item" href="#">Student</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Register
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Teacher</a></li>
-
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-
-                            <li><a class="dropdown-item" href="#">Student</a></li>
-                        </ul>
-                    </li>
-                </ul> -->
                 <div class="ms-auto me-2">
 
                     <button class="btn btn-primary btn-lg">Login</button>
@@ -83,32 +51,11 @@
                     <button class="btn btn-success btn-lg">Register</button>
 
                 </div>
-
-                <!-- <div class="btn-group ms-auto me-2" role="group">
-                    <button id="btnGroupDrop1" type="button" class="btn btn-primary btn-lg dropdown-toggle"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Login
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                        <li><a class="dropdown-item" href="#">Teacher</a></li>
-                        <li><a class="dropdown-item" href="#">Student</a></li>
-                    </ul>
-                </div>
-
-                <div class="btn-group" role="group">
-                    <button id="btnGroupDrop2" type="button" class="btn btn-success btn-lg dropdown-toggle"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Register
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="btnGroupDrop2">
-                        <li><a class="dropdown-item" href="#">Teacher</a></li>
-                        <li><a class="dropdown-item" href="#">Student</a></li>
-                    </ul>
-                </div> -->
-
             </div>
         </div>
     </nav>
+
+    <!-- At first all the divs would be hidden and will appear as per users action -->
 
     <!-- Hidden Registration div -->
     <div class="container register-div d-none">
@@ -146,13 +93,12 @@
                     <button type="button" class="btn btn-outline-dark btn-lg" id="teacherRegisterButton">
                         Register
                     </button>
-                    <!-- <input type="submit" class="btn btn-outline-dark btn-lg" id="teacherRegisterButton" /> -->
-
                 </div>
 
                 <div class="card-body text-center">
                     <button class="btn btn-outline-primary btn-lg" id="showStudent">Student?</button>
                 </div>
+
             </form>
         </div>
 
@@ -194,9 +140,9 @@
                 <div class="card-body text-center">
                     <button class="btn btn-outline-primary btn-lg" id="showTeacher">Teacher?</button>
                 </div>
+
             </form>
         </div>
-
     </div>
 
     <!-- Hidden Login div -->
@@ -235,7 +181,6 @@
                 </div>
 
             </form>
-
         </div>
 
         <!-- Student login -->
@@ -274,11 +219,9 @@
 
     </div>
 
-    <!-- JavaScript -->
+    <!-- Custom JavaScript -->
     <script src="app.js"></script>
     <script src="animation.js"></script>
-
-    <script src=" http://login2explore.com/jpdb/resources/js/0.0.3/jpdb-commons.js "></script>
 
     <!-- Bootstrap javascript plugins -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
