--- a/teacherHome.html
+++ b/teacherHome.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Teacher</title>
+    <title>Teacher</title>
 </head>
 
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome Teacher</h1>
 </body>
 
 </html>
